# sandblaster

./: .gitignore  README.md  pyproject.toml  requirements.txt
compiler/: Makefile  compile_sb.c  re2dot.c
docs/: extraction.md
extractors/: extract.sh  extract_filters.py  extract_profile_data_from_kext.py  extract_sandbox_operations.py  extract_scm.py
reverse-sandbox/: extract_profile_data_from_kext.py  filters.py  graph.py  modifiers.py  operation_node.py  parse_strings.py  platform_binary  reduced.py  regex_parser.py  reverse_sandbox.py  reverse_string.py  sandbox_filter.py  sandbox_operations_extractor.py  sandbox_regex.py  test_parse_strings.py
reverse-sandbox/graphs/: graph.py
reverse-sandbox/misc/: filters.json  modifiers.json  modifiers_functions.json
reverse-sandbox/nodes/: non_terminal_node.py  operation_node.py  operation_node_builder.py  operation_node_parser.py  terminal_node.py
sandblaster/: __main__.py  modifiers.py  reverse_sandbox.py  sandblaster.py  sandbox_data.py  sandbox_filter.py
sandblaster/cli/: main.py
sandblaster/configs/: filters.py
sandblaster/filters/: base.py  filter_resolver.py  modifier_resolver.py  terminal_resolver.py
sandblaster/graphs/: graph.py
sandblaster/misc/: modifiers.json  modifiers_functions.json
sandblaster/nodes/: modifier.py  non_terminal.py  non_terminal_node.py  operation_node.py  operation_node_builder.py  operation_node_parser.py  terminal.py  terminal_node.py
sandblaster/parsers/: bool_expressions.py  expression.py  graph.py  header.py  node.py  profile.py  regex.py  sandbox.py  strings.py
(+27 files in other folders)
